# ur_moveit2_servo

./: .gitmodules  README.md
.docker/: Dockerfile  build_image.sh  build_image_zsh.sh  entrypoint.bash  entrypoint.zsh  run_user.sh  run_user_nvidia.sh  setup.bash  setup.zsh
aruco_ros/aruco_ros/launch/: single.launch.py
end_effector/: CMakeLists.txt
end_effector/launch/: end_effector.launch.xml  ur_eef.launch.xml
end_effector/urdf/: end_effector.urdf.xacro  output.urdf  ur.urdf.xacro
iaac_ur_description/: CMakeLists.txt  package.xml
iaac_ur_description/meshes/deco2/: deco2_ee_co.stl  deco2_ee_vi.stl
iaac_ur_description/urdf/: deco2_mosaic.xacro
pymoveit2/pymoveit2/robots/: ur.py
ur_commander/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ur_commander/commander_py/: commander.py  commander_utils.py  commander_viz.py  ros_tf_utils.py  transform_utils.py
ur_commander/config/: point data.txt  rerun_robot_stream.rbl  rivz2_config.rviz  robot_viz.rviz  rviz2_config.rviz
ur_commander/images/: ExtrinsicParameters20250711090843.txt
ur_commander/launch/: deco2_handeye.launch.py  deco2_ur10e.launch.py  iaac_ur10e.launch.py  iaac_ur10e_handeye.launch.py  iaac_ur10e_servo.launch.py  iaac_ur_bringup.launch.py  pick_n_place.launch.py
ur_commander/notebook/: commander_node_test.ipynb  plan_test.ipynb
ur_commander/scripts/: aruco_detection.py  automated_handeye_fileloader.py  camera_info_publisher.py  camera_static.py  commander_node_test.ipynb  commander_node_test2.ipynb  deco2.ipynb  get_intrinsic.py  handeye_calibration.py  handeye_calibration_folder.py  image_publisher.py  rerun_log.py  rerun_urdf.py  save_pointcloud_service.py  test.py  test_commander.py  tf_service_client.py  tf_service_server.py  udp_server.py
ur_commander/src/ur_commander/: aruco_detection.py
ur_commander/srv/: GetTransform.srv  SavePointCloud.srv
ur_commander/test/: tes_commander.py
ur_commander/ur_commander/: commander.py  example.py  scene.py  test.py
ur_servo_vision/: package.xml  setup.cfg  setup.py
ur_servo_vision/ur_servo_vision/nodes/: hand_to_twist.py
