<?xml version="1.0"?>
<package format="3">
  <name>ur_servo_vision</name>
  <version>0.0.1</version>
  <description>MediaPipe vision teleoperation for UR MoveIt Servo.</description>

  <maintainer email="you@example.com">prottay</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>